# MLOps-Course-Labs

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
LAb3/: main.py  requirements.txt
LAb3/models/: svm_churn_model.pkl
LAb3/tests/: test_api.py
LAb3/utils/: logger.py
mlruns/0/: meta.yaml
mlruns/123875861697330749/: meta.yaml
mlruns/123875861697330749/0a50149379e64285a22c8893b4b3cce7/: meta.yaml
mlruns/123875861697330749/0bc788f83c824f0a9367b979e7ef40f4/: meta.yaml
mlruns/361648217807407222/: meta.yaml
mlruns/361648217807407222/1209656f4c1d4afc9d28022e6b457293/: meta.yaml
mlruns/361648217807407222/27b593f4006f4563961bd83e37e265f2/: meta.yaml
mlruns/361648217807407222/2a16e0043d2f4b00bed04000f1d7bcf0/: meta.yaml
mlruns/361648217807407222/3d05301ff41c4a19bdf9b97867de6bc1/: meta.yaml
mlruns/361648217807407222/3fedb783b0884f709734c6c7f6715232/: meta.yaml
mlruns/361648217807407222/40e5a252022149898646916770396a22/: meta.yaml
mlruns/361648217807407222/621a7d49b4a24370a9c6865255b4d839/: meta.yaml
mlruns/361648217807407222/779ff701d6414ba693b7b2dec42065c0/: meta.yaml
mlruns/361648217807407222/a1e3d784004c4f029ef45912f2dbe0d2/: meta.yaml
mlruns/361648217807407222/bd2993396e4d4daaa998248f795eb20f/: meta.yaml
mlruns/361648217807407222/c2fd4b6dee54445d87288e28c803698b/: meta.yaml
mlruns/models/svm_model/: meta.yaml
src/: train.py  train_2.py  train_3.py  train_4.py
src/MLOps_Course_Labs/: main.py
src/tests/: test_api.py
tests/: test_api.py
utils/: logger.py
(+106 files in other folders)
