[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "MLOps-Course-Labs"  # Must match import name
version = "0.1.0"

[tool.setuptools]
packages = ["MLOps_Course_Labs"]  # Internal Python name (underscores)
package-dir = {"MLOps_Course_Labs" = "."}  # Maps to root dir